[package]
name = "rustoverflow"
version = "0.1.0"
edition = "2021"
authors = ["Florian Kohn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"]}
rocket-sass-fairing = "0.1.1"
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
bcrypt = "0.10.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
chrono = {version="0.4.19", features = ["serde"]}
chrono-humanize = "0.2.1"
comrak = "0.12.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]